--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,43 @@
-@charset "utf-8";
-/* CSS Document */
+#feedback {
+	background-color:#E0C1A0;
+}
+.carousel-control.right, .carousel-control.left {
+    background-image: none;
+    color: #f4511e;
+}
 
+.carousel-indicators li {
+    border-color: #f4511e;
+}
 
+.carousel-indicators li.active {
+    background-color: #FFDBAE;
+}
 
+.item h4 {
+    font-size: 19px;
+    line-height: 1.375em;
+    font-weight: 400;
+    font-style: italic;
+    margin: 70px 0;
+}
 
+.item span {
+    font-style: normal;
+}
 
+footer {
+      background-color: #B7956B;
+      color: #FFFEEB;
+      padding: 32px;
+  }
+  footer a {
+      color: #f5f5f5;
+  }
+  footer a:hover {
+      text-decoration: none;
+  }  
+footer i:hover {
+       opacity: 0.7;
+  }  
+  
